syntax = "proto3";

package example;

message ExampleMessage {
    string text = 1;
}

service ExampleService {
    rpc SendMessage(ExampleMessage) returns (ExampleMessage);
}
